# bluerov2-swarm

./: CMakeLists.txt  README.md  package.xml
config/: controller_params.yaml
launch/: swarm_gazebo.launch.py
scripts/: formation_manager.py  rov_bridge.py  swarm_controller.py  usbl_simulator.py
worlds/: underwater_world.sdf
